troquei o texto do twitter

--- a/index.html
+++ b/index.html
@@ -19,11 +19,7 @@
         <div class="card" id="twitter">
           <i class="fa-brands fa-twitter"></i>
           <h2>twitter</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
-            velit voluptatem molestiae porro illum deserunt recusandae a quod
-            sed deleniti.
-          </p>
+          <p>Mudei o texto do twitter</p>
           <a href="#">Saiba mais</a>
         </div>
 
