alterado o texto do instagram

--- a/index.html
+++ b/index.html
@@ -26,11 +26,7 @@
         <div class="card" id="instagram">
           <i class="fa-brands fa-instagram"></i>
           <h2>instagram</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
-            velit voluptatem molestiae porro illum deserunt recusandae a quod
-            sed deleniti.
-          </p>
+          <p>Mudando o texto do instagram</p>
           <a href="#">Saiba mais</a>
         </div>
 
