troquei o texto do youtube

--- a/index.html
+++ b/index.html
@@ -33,11 +33,7 @@
         <div class="card" id="youtube">
           <i class="fa-brands fa-youtube"></i>
           <h2>youtube</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
-            velit voluptatem molestiae porro illum deserunt recusandae a quod
-            sed deleniti.
-          </p>
+          <p>Troquei o texto do youtube</p>
           <a href="#">Saiba mais</a>
         </div>
       </section>
